--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Randy Portfolio 444</title>
+    <title>Randy's Portfolio</title>
     <link rel="icon" type="image/x-icon" href="src/assets/logo.png">
   </head>
   <body class="light">
