--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Randy's Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="src/assets/Memojirandy4.png/?v=2">
+    <link rel="icon" type="image/x-icon" href="src/assets/Memojirandy4.png?v=2">
   </head>
   <body class="light">
     <div id="root"></div>
