--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="Jv3HcCq27Nn_a2cOuTzYhv1v3OrPX7XnQJSQITDjLic" />
     <title>Randy's Portfolio</title>
-    <meta name="description" content="Portfolio de randy Semedo Développeur Informatique" />
-    <meta property="og:description" content="Portfolio de randy Semedo Développeur Informatique"/>
-    <meta property="og:title" content="Randy's Portfolio"/>
+    <meta name="description" content="Portfolio de Randy Semedo, Développeur Informatique Web/Logiciel, Randy's Portfolio, French Web/Software developer">
+    <!-- Facebook Tags -->
+    <meta property="og:url" content="https://randys.netlify.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Randy's Portfolio">
+    <meta property="og:description" content="Portfolio de Randy Semedo, Développeur Informatique Web/Logiciel, Randy's Portfolio, French Web/Software developer">
     <meta property="og:image" content="src/assets/logo.png">
+    <!-- Twitter Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="randys.netlify.app">
+    <meta property="twitter:url" content="https://randys.netlify.app">
+    <meta name="twitter:title" content="Randy's Portfolio">
+    <meta name="twitter:description" content="Portfolio de Randy Semedo, Développeur Informatique Web/Logiciel, Randy's Portfolio, French Web/Software developer">
+    <meta name="twitter:image" content="src/assets/logo.png">
+
     <link rel="icon" type="image/x-icon" href="src/assets/logo.png?v=2">
   </head>
   <body class="light">
     <div id="root"></div>
-
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
