perfect SEO + favicon

--- a/index.html
+++ b/index.html
@@ -2,25 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
     <meta name="google-site-verification" content="Jv3HcCq27Nn_a2cOuTzYhv1v3OrPX7XnQJSQITDjLic" />
-    <title>Randy's Portfolio</title>
-    <meta name="description" content="Portfolio de Randy Semedo, Développeur Informatique Web/Logiciel, Randy's Portfolio, French Web/Software developer">
+    <link rel="icon" href="src/assets/favicon.ico?v=2">
+    <title>Randy's Portfolio | Developer</title>
+    <meta name="description" content="Portfolio Randy Semedo, Randy's Portfolio, Développeur Informatique Web/Logiciel, Web/Software developer, ReactJs/TailwindCSS, Angular/NodeJs/Bootstrap, Java, Python, C">
     <!-- Facebook Tags -->
     <meta property="og:url" content="https://randys.netlify.app">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Randy's Portfolio">
-    <meta property="og:description" content="Portfolio de Randy Semedo, Développeur Informatique Web/Logiciel, Randy's Portfolio, French Web/Software developer">
-    <meta property="og:image" content="src/assets/logo.png">
+    <meta property="og:title" content="Randy's Portfolio | Developer">
+    <meta property="og:description" content="Portfolio Randy Semedo, Randy's Portfolio, Développeur Informatique Web/Logiciel, Web/Software developer, ReactJs/TailwindCSS, Angular/NodeJs/Bootstrap, Java, Python, C">
+    <meta property="og:image" content="src/assets/favicon.ico?v=2">
     <!-- Twitter Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="randys.netlify.app">
     <meta property="twitter:url" content="https://randys.netlify.app">
-    <meta name="twitter:title" content="Randy's Portfolio">
-    <meta name="twitter:description" content="Portfolio de Randy Semedo, Développeur Informatique Web/Logiciel, Randy's Portfolio, French Web/Software developer">
-    <meta name="twitter:image" content="src/assets/logo.png">
-
-    <link rel="icon" type="image/x-icon" href="src/assets/logo.png?v=2">
+    <meta name="twitter:title" content="Randy's Portfolio | Developer">
+    <meta name="twitter:description" content="Portfolio Randy Semedo, Randy's Portfolio, Développeur Informatique Web/Logiciel, Web/Software developer, ReactJs/TailwindCSS, Angular/NodeJs/Bootstrap, Java, Python, C">
+    <meta name="twitter:image" content="src/assets/favicon.ico?v=2">
   </head>
   <body class="light">
     <div id="root"></div>
